# docs/swagger.json
@@ -76,6 +76,12 @@
                             "$ref": "#/definitions/schemas.APIResponse400"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.APIResponse401"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -120,6 +126,12 @@
                             "$ref": "#/definitions/schemas.APIResponse400"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.APIResponse401"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -162,6 +174,12 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/schemas.APIResponse400"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.APIResponse401"
                         }
                     },
                     "404": {
@@ -215,6 +233,12 @@
                             "$ref": "#/definitions/schemas.APIResponse400"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.APIResponse401"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -257,6 +281,12 @@
                             "$ref": "#/definitions/schemas.APIResponse400"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.APIResponse401"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -290,6 +320,12 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/schemas.APIResponse400"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.APIResponse401"
                         }
                     },
                     "404": {
@@ -336,6 +372,12 @@
                             "$ref": "#/definitions/schemas.APIResponse400"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.APIResponse401"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -378,6 +420,12 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/schemas.APIResponse400"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.APIResponse401"
                         }
                     },
                     "404": {
@@ -431,6 +479,12 @@
                             "$ref": "#/definitions/schemas.APIResponse400"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.APIResponse401"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -473,6 +527,12 @@
                             "$ref": "#/definitions/schemas.APIResponse400"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.APIResponse401"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -510,6 +570,19 @@
                 "message": {
                     "type": "string",
                     "example": "bad request"
+                }
+            }
+        },
+        "schemas.APIResponse401": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 401
+                },
+                "message": {
+                    "type": "string",
+                    "example": "unauthorized"
                 }
             }
         },
